Fixed refreshing of UI settings

--- a/src/webui/main-inline.html
+++ b/src/webui/main-inline.html
@@ -3026,6 +3026,9 @@ body[dir="rtl"] .form-horizontal .form-actions {
     margin-right: -20px;
   }
 }
+body[dir="rtl"] .modal-footer {
+  text-align: left;
+}
 /*!
  * Bootstrap v2.3.2
  *
@@ -14611,7 +14614,7 @@ $(function() {
       }
       else if (settingsJSON !== g_initialSettingsJSON) {
         // Settings have changed -- update them in the application (and trigger a reconnect).
-        HtmlCtrlInterface_UpdateSettings(settingsJSON);
+        HtmlCtrlInterface_SaveSettings(settingsJSON);
       }
     }
   });
@@ -14883,7 +14886,6 @@ function skipUpstreamProxyUpdate() {
 
 function upstreamProxyErrorNotice(errorMessage) {
   // Show/hide the appropriate message depending on the state of the settings
-  alert('g_initObj.Settings.UpstreamProxyHostname:' + g_initObj.Settings.UpstreamProxyHostname + !!g_initObj.Settings.UpstreamProxyHostname);
   $('#UpstreamProxyErrorModal .upstream-proxy-default')
     .toggleClass('hidden', !!g_initObj.Settings.UpstreamProxyHostname);
   $('#UpstreamProxyErrorModal .upstream-proxy-configured')
@@ -15315,12 +15317,16 @@ function setCookie(name, value) {
 
 var PSIPHON_LINK_PREFIX = 'psi:';
 
+/* Calls from C code to JS code. */
+
+// Add new status message.
 function HtmlCtrlInterface_AddMessage(jsonArgs) {
   setTimeout(function() {
     addLogMessage(JSON.parse(jsonArgs));
   }, 1);
 }
 
+// Add new notice. This may be interpreted and acted upon.
 function HtmlCtrlInterface_AddNotice(jsonArgs) {
   setTimeout(function() {
     var args = JSON.parse(jsonArgs);
@@ -15330,6 +15336,7 @@ function HtmlCtrlInterface_AddNotice(jsonArgs) {
   }, 1);
 }
 
+// Set the connected state.
 function HtmlCtrlInterface_SetState(jsonArgs) {
   setTimeout(function() {
     var args = JSON.parse(jsonArgs);
@@ -15338,6 +15345,18 @@ function HtmlCtrlInterface_SetState(jsonArgs) {
   }, 1);
 }
 
+// Refresh the current settings values.
+function HtmlCtrlInterface_RefreshSettings(jsonArgs) {
+  setTimeout(function() {
+    var args = JSON.parse(jsonArgs);
+    g_initObj.Settings = args;
+    fillSettingsValues(args);
+  }, 1);
+}
+
+/* Calls from JS code to C code. */
+
+// Let the C code know that the UI is ready.
 function HtmlCtrlInterface_AppReady() {
   setTimeout(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'ready';
@@ -15350,6 +15369,7 @@ function HtmlCtrlInterface_AppReady() {
   }, 1);
 }
 
+// Connection should start.
 function HtmlCtrlInterface_Start() {
   // Prevent duplicate state change attempts
   if (g_lastState === 'starting' || g_lastState === 'connected') {
@@ -15366,6 +15386,7 @@ function HtmlCtrlInterface_Start() {
   }, 1);
 }
 
+// Connection should stop.
 function HtmlCtrlInterface_Stop() {
   // Prevent duplicate state change attempts
   if (g_lastState === 'stopping' || g_lastState === 'disconnected') {
@@ -15382,15 +15403,13 @@ function HtmlCtrlInterface_Stop() {
   }, 1);
 }
 
-function HtmlCtrlInterface_UpdateSettings(settingsJSON) {
+// Settings should be saved.
+function HtmlCtrlInterface_SaveSettings(settingsJSON) {
   setTimeout(function() {
-    var appURL = PSIPHON_LINK_PREFIX + 'updatesettings?' + encodeURIComponent(settingsJSON);
+    var appURL = PSIPHON_LINK_PREFIX + 'savesettings?' + encodeURIComponent(settingsJSON);
     if (IS_BROWSER) {
       console.log(decodeURIComponent(appURL));
-      var settingsObj = JSON.parse(settingsJSON);
-      for (var k in settingsObj) {
-        g_initObj.Settings[k] = settingsObj[k];
-      }
+      HtmlCtrlInterface_RefreshSettings(settingsJSON);
     }
     else {
       window.location = appURL;
@@ -15398,6 +15417,7 @@ function HtmlCtrlInterface_UpdateSettings(settingsJSON) {
   }, 1);
 }
 
+// Feedback should be sent.
 function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
   setTimeout(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'sendfeedback?' + encodeURIComponent(feedbackJSON);
@@ -15410,6 +15430,7 @@ function HtmlCtrlInterface_SendFeedback(feedbackJSON) {
   }, 1);
 }
 
+// Cookies (i.e., UI settings) should be saved.
 function HtmlCtrlInterface_SetCookies(cookiesJSON) {
   setTimeout(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'setcookies?' + encodeURIComponent(cookiesJSON);
@@ -15422,6 +15443,7 @@ function HtmlCtrlInterface_SetCookies(cookiesJSON) {
   }, 1);
 }
 
+// Banner was clicked.
 function HtmlCtrlInterface_BannerClick() {
   setTimeout(function() {
     var appURL = PSIPHON_LINK_PREFIX + 'bannerclick';
@@ -15443,6 +15465,7 @@ function HtmlCtrlInterface_BannerClick() {
 window.HtmlCtrlInterface_AddMessage = HtmlCtrlInterface_AddMessage;
 window.HtmlCtrlInterface_SetState = HtmlCtrlInterface_SetState;
 window.HtmlCtrlInterface_AddNotice = HtmlCtrlInterface_AddNotice;
+window.HtmlCtrlInterface_RefreshSettings = HtmlCtrlInterface_RefreshSettings;
 
 })(window);
 
