--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -651,9 +651,9 @@
         <!-- LOG MESSAGES ==================================================-->
         <div class="tab-pane fade" id="messages-pane">
           <div>
-            <div class="controls checkbox checkbox-primary">
+            <div class="controls checkbox checkbox-primary invisible">
               <input type="checkbox" id="show-debug-messages"/>
-              <label class="invisible" for="show-debug-messages">
+              <label for="show-debug-messages">
                 <span data-i18n="messages#show-debug-label">
                   Show debug messages
                 </span>
@@ -674,11 +674,6 @@
                 <td data-content="message">
                 </td>
               </tr>
-              <li>
-                <i class="icon-li icon-globe"></i>
-                <a href="#" class="language-choice"
-                   data-value="localeCode" data-content="localeName"></a>
-              </li>
             </script>
 
           </div>
